--- a/src/components/Cabecalho.module.css
+++ b/src/components/Cabecalho.module.css
@@ -6,9 +6,10 @@
 hr {
   height: 4px;
   border: none;
-  background-color: purple;
-  width: 50%;
-  margin: auto;
+  background-color: #414040;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .destaque-texto {
