--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ html {
 
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: rgb(51, 50, 50);
 }
 
 /* Sobra para Bloco/Box */
@@ -39,4 +40,49 @@ body {
 
 .centralizar {
   text-align: center;
+}
+
+header p {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+h1 {
+  text-align: center;
+}
+
+/* CSS para para conteudo e Artigo */
+
+main {
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #f8f8f8;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+section {
+  margin-bottom: 20px;
+}
+
+h2 {
+  color: #333;
+}
+
+p {
+  color: #555;
+}
+
+article {
+  border: 1px solid #ddd;
+  padding: 10px;
+  margin-top: 15px;
+  background-color: #fff;
+  border-radius: 5px;
+}
+
+h3 {
+  color: #007bff;
 }
